fixed issue on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -46,6 +46,7 @@ p {
 #app {
     padding: 0px;
     width: 100%;
+    overflow: hidden;
 }
 
 .btn-outline-primary {
